# solana-roast-skill

./: .gitignore  AGENTS.md  LICENSE  README.md  SOURCES.md  install-custom.sh  install.sh
agents/: openai.yaml  solana-design-interrogator.md
commands/: roast-lecture.md  roast-resume.md  roast.md
examples/vulnerable-vault/: Anchor.toml  README.md
examples/vulnerable-vault/programs/vault/: Cargo.toml
examples/vulnerable-vault/programs/vault/src/: lib.rs
examples/vulnerable-vault/sample-roast-output/: design-spec.md  lecture.md  pre-audit-checklist.md  threat-model.md  transcript.md
rules/: interrogation-rules.md
skill/: SKILL.md  SOURCES.md  exploit-library.md  interrogation-protocol.md
skill/branches/: 01-accounts-and-pdas.md  02-authority-and-signers.md  03-cpi-and-composability.md  04-state-and-data.md  05-economic-invariants.md  06-upgrade-and-governance.md  07-compute-and-dos.md  08-tokens-spl-2022.md  09-client-and-integration.md
skill/templates/: design-spec.template.md  lecture.template.md  pre-audit-checklist.template.md  threat-model.template.md
